removing saving transactions feature which is outside the requirements